<resources>
    <string name="app_name">Pantau Harga</string>
    <string name="action_segarkan">Segarkan Daftar</string>
    <string name="action_kirimharga">Kirim Harga</string>
    <string name="action_urutkan">Urutkan Daftar</string>
    <string name="action_lokasisaya">Cek Lokasi Saya</string>
    <string name="action_ambilkordinatbantuan">Bantuan Setel Koordinat</string>

    <string name="action_hapusriwayatsemua">Hapus Semua Riwayat</string>
    <string name="action_hapusriwayatini">Hapus riwayat ini</string>


    <!-- MENU APLIKASI -->
    <string name="ic_teks_menu_kirimharga">Kirim Harga</string>
    <string name="ic_teks_menu_jualkomoditas">Jual Komoditas</string>
    <string name="ic_teks_menu_datapengguna">Data Pengguna</string>
    <string name="ic_teks_menu_riwayatlaporan">Riwayat Laporan</string>
    <string name="ic_teks_menu_tentangapp">Tentang Aplikasi</string>


    <!-- TOAST -->
    <string name="toast_nointernet">Koneksi internet tidak tersedia</string>

    <string name="teks_ok">OK</string>
    <string name="teks_batal">BATAL</string>
    <string name="teks_isimintalokasi">Aplikasi memerlukan akses lokasi dari perangkat untuk mengambil koordinat lokasi anda</string>
    <string name="toastdialog_pesangagalgps">GPS dan koneksi internet tidak tersedia, sehingga lokasi yang didapat akan tidak akurat.</string>

    <string name="toastgagaldata">Data tidak tersedia</string>
    <string name="toastolahdata">Gagal mengolah data</string>
    <string name="toastolahdataurut">Data tidak tersedia</string>
    <string name="toastnointernet">Koneksi internet tidak tersedia</string>
    <string name="teksketeranganperkg">harga per kilogram</string>


    <!-- CARI KOMODITAS -->
    <string name="tekscarikomoditas">Cari Komoditas Lain</string>
    <string name="teks_spin_namakomoditas">Nama Komoditas</string>
    <string name="teks_seekbar_radius">Radius Pencarian (Kilometer)</string>


    <!-- URUTKAN KOMODITAS -->
    <string name="teks_urutkanberdasarkan">Urutkan</string>
    <string name="teks_keturutan">Urutkan harga komoditas berdasarkan :</string>

    <string-array name="array_modeurutan">
        <item>Lokasi terdekat</item>
        <item>Harga termurah</item>
        <item>Harga termahal</item>
    </string-array>

    <string name="toastgagalpeta">Peta gagal dimuat</string>


    <!-- REGISTER -->
    <string name="login_register_datapengguna">Data Pengguna</string>
    <string name="login_register">Registrasi</string>
    <string name="login_registerket">Buat akun Pantau Harga dengan mendaftarkan data diri anda berikut ini dengan lengkap dan benar</string>
    <string name="login_namalengkap">Nama Lengkap</string>
    <string name="login_username">Nama Panggilan (Username)</string>
    <string name="login_password">Password</string>
    <string name="login_passwordkonfirm">Konfirmasi Password</string>
    <string name="login_email">E-mail</string>
    <string name="login_ktp">Nomor KTP</string>
    <string name="login_nohp">Nomor Handphone</string>
    <string name="login_alamat">Alamat Lengkap</string>
    <string name="login_kodepos">Kode Pos</string>


    <string name="karakterboleh">qwertyuiopasdfghjklzxcvbnmQWERTYUIOPASDFGHJKLZXCVBNM1234567890_</string>
    <string name="karakterbolehnama">qwertyuiopasdfghjklz xcvbnmQWERTYUIOPASDFGHJKLZXCVBNM1234567890_</string>
    <string name="karakterbolehusername">qwertyuiopasdfghjklzxcvbnmQWERTYUIOPASDFGHJKLZXCVBNM1234567890_@.</string>

    <string name="login_login">Masuk Pantau Harga</string>
    <string name="teks_daftar">DAFTAR</string>
    <string name="teks_masuk">MASUK</string>

    <!-- GAGAL TOAST REGISTER LOGIN-->
    <string name="oklogin_masuk">Anda berhasil masuk ke akun Pantau Harga anda. Anda bisa lanjut memantau harga serta memperbaharui harga terbaru dari komoditas tersedia.</string>
    <string name="gagalogin_namapanggil">Isi nama panggilan dengan benar</string>
    <string name="gagalogin_password">Isi kata kunci dengan benar</string>
    <string name="gagalogin_masuk">Gagal masuk ke akun Pantau Harga anda</string>
    <string name="gagalogin_buatakun">Gagal membuat akun Pantau Harga</string>

    <!-- PERINGATAN LOGIN -->
    <string name="toast_loginmasukdulu">Silahkan masuk ke akun Pantau Harga terlebih dahulu sebelum lanjut mengirim harga komoditas terbaru</string>
    <string name="toast_loginkeluarok">Anda telah keluar dari akun Pantau Harga</string>


    <!-- GAGAL TOAST REGISTRASI -->
    <string name="regist_namalengkap">Isi nama lengkap anda dengan benar</string>
    <string name="regist_namapanggilan">Isi nama panggilan (username) dengan benar</string>
    <string name="regist_password">Isi kata sandi dengan benar (minimal 6 karakter)</string>
    <string name="regist_passgasama">Kata sandi tidak sama</string>
    <string name="regist_email">Isi alamat email dengan benar</string>
    <string name="regist_nomorhp">Isi nomor handphone dengan benar</string>
    <string name="regist_alamat">Isi alamat lengkap dengan benar</string>
    <string name="datapengguna_email">Alamat E-mail</string>
    <string name="datapengguna_noktp">Nomor KTP</string>
    <string name="datapengguna_nohp">Nomor Handphone</string>
    <string name="datapengguna_alamat">Alamat Lengkap</string>
    <string name="datapengguna_kodepos">Kode Pos</string>
    <string name="datapengguna_tombol_keluar">KELUAR AKUN</string>


    <!-- KIRIM LAPORAN HARGA BARANG -->
    <string name="lapor_hargajudul">Lapor Harga</string>
    <string name="lapor_hargajuduledit">Detil Laporan Harga</string>
    <string name="lapor_keterangan">Laporkan harga komoditas pangan dengan mengisi data-data di bawah ini dengan lengkap dan benar</string>
    <string name="lapor_jeniskomoditas">Nama Komoditas</string>
    <string name="lapor_harga">Harga (Rp/Kg)</string>
    <string name="lapor_hargahint">harga komoditas</string>
    <string name="lapor_kuantitas">Jumlah (Kg)</string>
    <string name="lapor_kuantitashint">jumlah komoditas pangan</string>
    <string name="lapor_koordinat">Lokasi</string>
    <string name="lapor_kirimdata">KIRIM DATA</string>
    <string name="lapor_simpandata">SIMPAN DRAFT</string>

    <string name="lapor_toast_gagalharga">Isi harga komoditas dengan benar</string>
    <string name="lapor_toast_jumlahkomod">Isi jumlah komoditas dengan benar</string>
    <string name="lapor_toast_gagalokasi">Lokasi pelaporan tidak ada. Aktifkan GPS dan internet perangkat anda.</string>
    <string name="lapor_gagalkirimdata">Gagal mengirim data laporan</string>

    <string name="lapor_okkirimdata">Data laporan harga telah dikirim</string>

    <string name="lapor_okkirimdraft">Data laporan disimpan sementara</string>

    <string name="teks_dialog_kirim">KIRIM LAGI</string>
    <string name="teks_dialog_selesai">SELESAI</string>


    <!-- PETA LOKASI -->
    <string name="petaambil_judulhalaman">Peta Ambil Lokasi</string>
    <string name="petaambil_judulbantuan">Bantuan</string>
    <string-array name="array_bantuanlokasi">
        <item>Sentuh posisi di peta untuk mengambil koordinat lokasi yang diinginkan.</item>
        <item>Sentuh dan tahan penanda berwarna merah di peta untuk mengaktifkan mode geser penanda peta. Jika mode geser sudah aktif, silahkan geser penanda peta ke posisi peta yang diinginkan untuk mengambil koordinat lokasinya.</item>
        <item>Jika koordinat lokasi sudah sesuai dengan keinginan, silahkan tekan tombol Simpan untuk menyimpan koordinat lokasi dan kembali ke halaman sebelumnya.</item>
    </string-array>

    <string name="toast_oksimpan">Koordinat lokasi laporan berhasil diambil</string>
    <string name="toastgagal_ambilkordinat">Koordinat lokasi laporan gagal diambil, aktifkan GPS dan koneksi internet untuk mengambil lokasi dengan akurat.</string>

    <string name="toast_gagalokasisetelpeta">Tidak dapat membuka peta karena GPS dan internet anda tidak aktif</string>


    <!-- RIWAYAT LAPORAN -->
    <string name="riwayat_judul">Riwayat Laporan Harga</string>
    <string name="riwayat_datatidakada">Data riwayat tidak tersedia</string>
    <string name="riwayat_ingathapus">Hapus semua data riwayat laporan ?</string>
    <string name="riwayat_ingathapussatu">Hapus data laporan ini ?</string>
    <string name="riwayat_hapusdataselesai">Data telah dihapus</string>


    <!-- TENTANG APLIKASI -->
    <string name="tentangapl_judul">Tentang Aplikasi</string>
    <string name="tentangapl_judulversi">versi 1.0.0</string>
    <string name="tentangapl_olehstelsel">CodingStelsel @2015</string>

    <string name="tentangapl_facebook">Facebook Page</string>
    <string name="tentangapl_facebooklink">https://www.facebook.com/pantauharga</string>

    <string name="tentangapl_pembuat">Dibuat oleh tim CodingStelsel di Code4Nation.org</string>


</resources>
