<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:keepScreenOn="true"
              android:orientation="vertical">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:fadingEdge="none">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/activity_vertical_margin"
                android:orientation="vertical">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/login_register"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="26sp"/>


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dp"
                    android:text="@string/login_registerket"
                    android:textColor="@color/warnatekssubjudul"
                    android:textSize="@dimen/ukuran16sp"/>


                <android.support.design.widget.TextInputLayout
                    android:id="@+id/teksinputlay_editnamalengkap"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    app:errorTextAppearance="@style/TextAppearence.App.TextInputLayoutError"
                    app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout">


                    <EditText
                        android:id="@+id/edit_namalengkap"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:digits="@string/karakterbolehnama"
                        android:hint="@string/login_namalengkap"
                        android:imeOptions="actionNext"
                        android:inputType="text"
                        android:maxLength="100"
                        android:singleLine="true"
                        android:textSize="@dimen/ukuran16sp"/>


                </android.support.design.widget.TextInputLayout>


                <android.support.design.widget.TextInputLayout
                    android:id="@+id/teksinputlay_editnamapanggil"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    app:errorTextAppearance="@style/TextAppearence.App.TextInputLayoutError"
                    app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout">


                    <EditText
                        android:id="@+id/edit_namapanggilan"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:digits="@string/karakterboleh"
                        android:hint="@string/login_email"
                        android:imeOptions="actionNext"
                        android:inputType="text"
                        android:maxLength="100"
                        android:textSize="@dimen/ukuran16sp"
                        android:singleLine="true"/>


                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/teksinputlay_editpassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    app:errorTextAppearance="@style/TextAppearence.App.TextInputLayoutError"
                    app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout">


                    <EditText
                        android:id="@+id/edit_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/login_password"
                        android:imeOptions="actionNext"
                        android:inputType="textPassword"
                        android:textSize="@dimen/ukuran16sp"
                        android:singleLine="true"
                        />


                </android.support.design.widget.TextInputLayout>


                <android.support.design.widget.TextInputLayout
                    android:id="@+id/teksinputlay_editkonfirmasipass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    app:errorTextAppearance="@style/TextAppearence.App.TextInputLayoutError"
                    app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout">


                    <EditText
                        android:id="@+id/edit_konfirmasipass"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/login_passwordkonfirm"
                        android:imeOptions="actionNext"
                        android:inputType="textPassword"
                        android:maxLength="10"
                        android:textSize="@dimen/ukuran16sp"
                        android:singleLine="true"/>


                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/teksinputlay_editktp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    app:errorTextAppearance="@style/TextAppearence.App.TextInputLayoutError"
                    app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout">


                    <EditText
                        android:id="@+id/edit_nomorktp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:digits="@string/karakterbolehnama"
                        android:hint="@string/login_ktp"
                        android:imeOptions="actionNext"
                        android:inputType="number"
                        android:maxLength="100"
                        android:textSize="@dimen/ukuran16sp"
                        android:singleLine="true"/>


                </android.support.design.widget.TextInputLayout>


                <android.support.design.widget.TextInputLayout
                    android:id="@+id/teksinputlay_editnomorhp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    app:errorTextAppearance="@style/TextAppearence.App.TextInputLayoutError"
                    app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout">


                    <EditText
                        android:id="@+id/edit_nomorhp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:digits="@string/karakterbolehnama"
                        android:hint="@string/login_nohp"
                        android:imeOptions="actionNext"
                        android:inputType="number"
                        android:maxLength="20"
                        android:textSize="@dimen/ukuran16sp"
                        android:singleLine="true"/>


                </android.support.design.widget.TextInputLayout>


                <android.support.design.widget.TextInputLayout
                    android:id="@+id/teksinputlay_editalamat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    app:errorTextAppearance="@style/TextAppearence.App.TextInputLayoutError"
                    app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout">


                    <EditText
                        android:id="@+id/edit_alamat"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/login_alamat"
                        android:imeOptions="actionNext"
                        android:inputType="text"
                        android:maxLength="200"
                        android:textSize="@dimen/ukuran16sp"
                        android:singleLine="true"/>


                </android.support.design.widget.TextInputLayout>


                <android.support.design.widget.TextInputLayout
                    android:id="@+id/teksinputlay_editkodepos"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    app:errorTextAppearance="@style/TextAppearence.App.TextInputLayoutError"
                    app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout">


                    <EditText
                        android:id="@+id/edit_kodepos"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/login_kodepos"
                        android:imeOptions="actionNext"
                        android:inputType="number"
                        android:maxLength="5"
                        android:textSize="@dimen/ukuran16sp"
                        android:singleLine="true"/>


                </android.support.design.widget.TextInputLayout>


                <Button
                    android:id="@+id/tomboldaftar"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="14dp"
                    android:layout_marginBottom="@dimen/activity_vertical_margin"
                    android:background="@drawable/desaintombolmenu"
                    android:text="@string/teks_daftar"
                    android:textColor="@color/putih"
                    android:textSize="@dimen/ukuran16sp"
                    android:textStyle="bold"/>


            </LinearLayout>


        </LinearLayout>


    </ScrollView>


</LinearLayout>