<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">



    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:fadingEdge="none">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="@dimen/activity_horizontal_margin">


                <ImageView
                    android:id="@+id/gambarlogin"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:scaleType="fitCenter"
                    android:adjustViewBounds="true"
                    android:src="@drawable/web_hi_res_512"
                    android:layout_gravity="center"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/login_login"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="24sp"
                    android:layout_marginTop="4dp"
                    android:layout_gravity="center"
                    />

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/teksinputlay_editnamapanggil"
                    android:layout_gravity="center"
                    android:layout_width="290dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="14dp"
                    app:errorTextAppearance="@style/TextAppearence.App.TextInputLayoutError"
                    app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout"
                    >


                    <EditText
                        android:id="@+id/edit_namapanggilan"
                        android:layout_width="290dp"
                        android:layout_height="wrap_content"
                        android:digits="@string/karakterboleh"
                        android:hint="@string/login_username"
                        android:imeOptions="actionNext"
                        android:inputType="text"
                        android:maxLength="100"
                        android:singleLine="true"/>


                </android.support.design.widget.TextInputLayout>


                <android.support.design.widget.TextInputLayout
                    android:id="@+id/teksinputlay_editpassword"
                    android:layout_width="290dp"
                    android:layout_gravity="center"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="1dp"
                    app:errorTextAppearance="@style/TextAppearence.App.TextInputLayoutError"
                    app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout">


                    <EditText
                        android:id="@+id/edit_password"
                        android:layout_width="290dp"
                        android:layout_height="wrap_content"
                        android:digits="@string/karakterboleh"
                        android:hint="@string/login_password"
                        android:imeOptions="actionNext"
                        android:inputType="textPassword"
                        android:maxLength="10"
                        android:singleLine="true"
                        />


                </android.support.design.widget.TextInputLayout>



            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="34dp"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/tombolmasuk"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="150dp"
                    android:layout_height="42dp"
                    android:background="@drawable/desaintombolmenu"
                    android:text="@string/teks_masuk"
                    android:textColor="@color/putih"
                    android:textSize="@dimen/ukuran14sp"
                    android:textStyle="bold"/>


                <Button
                    android:id="@+id/tomboldaftar"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="150dp"
                    android:layout_height="42dp"
                    android:layout_marginLeft="10dp"
                    android:background="@drawable/desaintombolmenudaftar"
                    android:text="@string/teks_daftar"
                    android:textColor="@color/putih"
                    android:textSize="@dimen/ukuran14sp"
                    android:textStyle="bold"/>

            </LinearLayout>


        </LinearLayout>


    </ScrollView>




</LinearLayout>